Fixed a mistake on Pow Wow, and shut off Pay Pal on the Silents page.

--- a/Event_Pages/powwow.html
+++ b/Event_Pages/powwow.html
@@ -187,7 +187,7 @@ September 28<sup>th</sup> &amp; 29<sup>th</sup>
 </h2><p>
 
                             <h2 id="PowWowNote" align="center"><b>
-                                    2013 Vendors, please contact Marylina 
+                                    2013 Vendors, please contact Nadiya 
                                     at the phone number shown below.</b><br>
 							</h2>
                         </tr>
