--- a/index.html
+++ b/index.html
@@ -246,6 +246,15 @@ Click on the Gramophone to hear William S. Hart reading his story "Pinto Ben"!</
                                   cellspacing="5">
                                   <tbody>
                                     <tr>
+                                      <td id="EventDate">Sep. 21<sup>st</sup>
+                                      </td>
+                                      <td id="Event">
+<a href="Event_Pages/DayAtTheRanchCowboy.png" rel="lightbox[dayattheranch]" title="Kids Day At The Ranch">
+									  Kids Day at the Ranch &mdash; Cowboys
+</a>
+                                      </td>
+                                    </tr>
+                                    <tr>
                                       <td id="EventDate">Sep. 28<sup>th</sup> &amp; 29<sup>th</sup>
                                       </td>
                                       <td id="Event">
@@ -258,18 +267,22 @@ Click on the Gramophone to hear William S. Hart reading his story "Pinto Ben"!</
                                       <td id="EventDate">Oct. 13<sup>th</sup>
                                       </td>
                                       <td id="Event">
-									  Bow Wows &amp; Meows Pet Fair </td> </tr> <tr>
-                                      <td id="EventDate">Nov. 2<sup>nd</sup> &amp; 3<sup>rd</sup>
+									  <a target="_blank" href="http://www.bowwowsandmeows.org/">
+									  Bow Wows &amp; Meows Pet Fair</a>
+									  <div id="EventDetail">
+									  link opens a new window 
+									  </div> 
+									  </td> 
+									  </tr> 
+									  <tr>
+                                      <td id="EventDate">Nov. 2<sup>nd</sup>
                                       </td>
                                       <td id="Event">
-									  SCV Rose Show
-                                      </td>
-                                    </tr>
-                                    <tr>
-                                      <td id="EventDate">Nov. 30<sup>th</sup> &amp; Dec. 1<sup>st</sup>
-                                      </td>
-                                      <td id="Event">
-									  2<sup>nd</sup>Annual Hart Holiday Boutique
+									  <a target="_blank" href="http://scvrs.homestead.com/RoseShow.html">
+									  SCV Rose Show</a>
+									  <div id="EventDetail">
+									  link opens a new window 
+									  </div> 
                                       </td>
                                     </tr>
                                     <tr>
@@ -279,6 +292,13 @@ Click on the Gramophone to hear William S. Hart reading his story "Pinto Ben"!</
 <a href="Event_Pages/CowboysCarols2013.jpg" rel="lightbox[cowboyscarols]" title="Cowboys and Carols 2013">
 									  Cowboys &amp; Carols
 </a>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">Dec. 14<sup>th</sup>
+                                      </td>
+                                      <td id="Event">
+									  Kids Day at the Ranch &mdash; Chumash
                                       </td>
                                     </tr>
                                   </tbody>
