Added 2013 Silents Under the Stars photos

--- a/index.htm
+++ b/index.htm
@@ -200,12 +200,72 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                             border="0" height="24"
                                             width="313"></b></i></td>
                                 </tr>
-								<td align="center"><h3>
-Click on the Gramophone to hear William S. Hart reading his story "Pinto Ben"!</h3>
-<a href="http://ht.ly/iuY3N" target="_blank">
-<img class="centered" src="images/iStockPhotos/gramo.png" /></a>
-<p>Opens a new window, where you can hear and read about the recording.<p>
-<i>Thanks to our friends at SCVHistory.com for use of this!</i>
+								<td align="center"><h2>
+Click on the images below to see photos from 2013's<br>
+<b>Silents Under the Stars!</b></h2>
+<a href="images/silents2013/silents000.JPG" rel="lightbox[silents2013]" title="FOHP President Laurene Weste &amp; long-time resident Tom Frew">
+<img src="images/silents2013/thumbs/silents000.JPG" alt="2013 Silents Under the Stars"/></a>
+<a href="images/silents2013/silents001.JPG" rel="lightbox[silents2013]" title="2013 Silents Under the Stars">
+	<img src="images/silents2013/thumbs/silents001.JPG" alt="2013 Silents Under the Stars"/></a>
+<a href="images/silents2013/silents002.JPG" rel="lightbox[silents2013]" title="FOHP President &amp; Santa Clarita Mayor Pro Tem Laurene Weste">
+	<img src="images/silents2013/thumbs/silents002.JPG" alt="2013 Silents Under the Stars"/></a>
+<a href="images/silents2013/silents003.JPG" rel="lightbox[silents2013]" title="Nadia Littlewarrior, Norm Phillips &amp; Laurene Weste">
+	<img src="images/silents2013/thumbs/silents003.JPG" alt="2013 Silents Under the Stars"/></a>
+<a href="images/silents2013/silents004.JPG" rel="lightbox[silents2013]" title="Hunting wasps, prior to the event!">
+	<img src="images/silents2013/thumbs/silents004.JPG" alt="2013 Silents Under the Stars"/></a>
+<a href="images/silents2013/silents005.JPG" rel="lightbox[silents2013]" title="An evening of lights!">
+	<img src="images/silents2013/thumbs/silents005.JPG" alt="2013 Silents Under the Stars"/></a>
+<a href="images/silents2013/silents006.JPG" rel="lightbox[silents2013]" title="Projectionist and film historian David Shepard with Roger Basham">
+	<img src="images/silents2013/thumbs/silents006.JPG" alt="2013 Silents Under the Stars"/></a>
+<a href="images/silents2013/silents007.JPG" rel="lightbox[silents2013]" title="Authors Kimi &amp; E.J. Stephens and JohnBoston">
+	<img src="images/silents2013/thumbs/silents007.JPG" alt="2013 Silents Under the Stars"/></a>
+<a href="images/silents2013/silents008.JPG" rel="lightbox[silents2013]" title="Authors thinking deep thoughts">
+	<img src="images/silents2013/thumbs/silents008.JPG" alt="2013 Silents Under the Stars"/></a>
+<a href="images/silents2013/silents009.JPG" rel="lightbox[silents2013]" title="Bill Blowers &amp; FOHP Treasurer Cindy Beals">
+	<img src="images/silents2013/thumbs/silents009.JPG" alt="2013 Silents Under the Stars"/></a>
+<a href="images/silents2013/silents010.JPG" rel="lightbox[silents2013]" title="Frank Hoffman provides rides to the mansion">
+	<img src="images/silents2013/thumbs/silents010.JPG" alt="2013 Silents Under the Stars"/></a>
+<a href="images/silents2013/silents011.JPG" rel="lightbox[silents2013]" title="Tom Frew with FOHP board members Sheila Miller &amp; Sherron Blowers">
+	<img src="images/silents2013/thumbs/silents011.JPG" alt="2013 Silents Under the Stars"/></a>
+<a href="images/silents2013/silents012.JPG" rel="lightbox[silents2013]" title="Belly up to the bar with Volunteer President Bob Hill">
+	<img src="images/silents2013/thumbs/silents012.JPG" alt="2013 Silents Under the Stars"/></a>
+<a href="images/silents2013/silents013.JPG" rel="lightbox[silents2013]" title="2013 Silents Under the Stars">
+	<img src="images/silents2013/thumbs/silents013.JPG" alt="2013 Silents Under the Stars"/></a>
+<a href="images/silents2013/silents014.JPG" rel="lightbox[silents2013]" title="2013 Silents Under the Stars">
+	<img src="images/silents2013/thumbs/silents014.JPG" alt="2013 Silents Under the Stars"/></a>
+<a href="images/silents2013/silents015.JPG" rel="lightbox[silents2013]" title="Music provided by The All Digital String Band">
+	<img src="images/silents2013/thumbs/silents015.JPG" alt="2013 Silents Under the Stars"/></a>
+<a href="images/silents2013/silents016.JPG" rel="lightbox[silents2013]" title="2013 Silents Under the Stars">
+	<img src="images/silents2013/thumbs/silents016.JPG" alt="2013 Silents Under the Stars"/></a>
+<a href="images/silents2013/silents017.JPG" rel="lightbox[silents2013]" title="2013 Silents Under the Stars">
+	<img src="images/silents2013/thumbs/silents017.JPG" alt="2013 Silents Under the Stars"/></a>
+<a href="images/silents2013/silents018.JPG" rel="lightbox[silents2013]" title="2013 Silents Under the Stars">
+	<img src="images/silents2013/thumbs/silents018.JPG" alt="2013 Silents Under the Stars"/></a>
+<a href="images/silents2013/silents019.JPG" rel="lightbox[silents2013]" title="Authors E.J. &amp; Kimi Stephens signing books">
+	<img src="images/silents2013/thumbs/silents019.JPG" alt="2013 Silents Under the Stars"/></a>
+<a href="images/silents2013/silents020.JPG" rel="lightbox[silents2013]" title="2013 Silents Under the Stars">
+	<img src="images/silents2013/thumbs/silents020.JPG" alt="2013 Silents Under the Stars"/></a>
+<a href="images/silents2013/silents021.JPG" rel="lightbox[silents2013]" title="2013 Silents Under the Stars">
+	<img src="images/silents2013/thumbs/silents021.JPG" alt="2013 Silents Under the Stars"/></a>
+<a href="images/silents2013/silents022.JPG" rel="lightbox[silents2013]" title="Movie accompaniment provided by Ray Lowe">
+	<img src="images/silents2013/thumbs/silents022.JPG" alt="2013 Silents Under the Stars"/></a>
+<a href="images/silents2013/silents023.JPG" rel="lightbox[silents2013]" title="2013 Silents Under the Stars">
+	<img src="images/silents2013/thumbs/silents023.JPG" alt="2013 Silents Under the Stars"/></a>
+<a href="images/silents2013/silents024.JPG" rel="lightbox[silents2013]" title="Dinnertime music by The All Digital String Band">
+	<img src="images/silents2013/thumbs/silents024.JPG" alt="2013 Silents Under the Stars"/></a>
+<a href="images/silents2013/silents025.JPG" rel="lightbox[silents2013]" title="FOHP Board Members Becki Basham &amp; Nadiya Littlewarrior">
+	<img src="images/silents2013/thumbs/silents025.JPG" alt="2013 Silents Under the Stars"/></a>
+<a href="images/silents2013/silents026.JPG" rel="lightbox[silents2013]" title="L.A. County Park Event Coordinator Al Ewing">
+	<img src="images/silents2013/thumbs/silents026.JPG" alt="2013 Silents Under the Stars"/></a>
+<a href="images/silents2013/silents027.JPG" rel="lightbox[silents2013]" title="2013 Silents Under the Stars">
+	<img src="images/silents2013/thumbs/silents027.JPG" alt="2013 Silents Under the Stars"/></a>
+<a href="images/silents2013/silents028.JPG" rel="lightbox[silents2013]" title="2013 Silents Under the Stars">
+	<img src="images/silents2013/thumbs/silents028.JPG" alt="2013 Silents Under the Stars"/></a>
+<a href="images/silents2013/silents029.JPG" rel="lightbox[silents2013]" title="Entertaining historical perspective by writer John  Boston">
+	<img src="images/silents2013/thumbs/silents029.JPG" alt="2013 Silents Under the Stars"/></a>
+<a href="images/silents2013/silents030.JPG" rel="lightbox[silents2013]" title="2013 Silents Under the Stars">
+	<img src="images/silents2013/thumbs/silents030.JPG" alt="2013 Silents Under the Stars"/></a>
+
 								</td>
                                 </tr>
                                 <tr>
@@ -316,8 +376,6 @@ Click on the Gramophone to hear William S. Hart reading his story "Pinto Ben"!</
 to see pictures from the Hart Park events at the </h3>
 <a href="Event_Pages/cowboyfest.html"><img src="Event_Pages/RidersInTheSky.jpg"/></a>
 <h2>20<sup>th</sup> Annual Cowboy Festival</h2>
-                                    <p style="margin-top: 7px;
-                                      margin-bottom: 5px" align="center">
                         </tr>
                       </tbody>
                     </table>
