--- a/index.html
+++ b/index.html
@@ -346,6 +346,15 @@ Click on the images below to see photos from 2013's<br>
                                       </td>
                                     </tr>
                                     <tr>
+                                      <td id="EventDate">Nov. 30<sup>th</sup> &amp; Dec. 1<sup>st</sup>
+                                      </td>
+                                      <td id="Event">
+<a href="Event_Pages/HolidayBoutique2013.jpg" rel="lightbox[holidayboutique]" title="Hart Holiday Boutique">
+									  Hart Holiday Boutique &amp; Craft Fair
+</a>
+                                      </td>
+                                    </tr>
+                                    <tr>
                                       <td id="EventDate">Dec. 7<sup>th</sup>
                                       </td>
                                       <td id="Event">
