Made various graphics for Cowboys & Carols (including b&w version for printing) Made Pow Wow page a past event Made Cowboys and Carols page, with paypal button. Updated calendar Added Volunteer Recognition photos

--- a/Event_Pages/CowboysAndCarols.html
+++ b/Event_Pages/CowboysAndCarols.html
@@ -64,7 +64,7 @@ onload="MM_preloadImages('../images/nav/zoo_B.gif','../images/nav/zoo_R.gif','..
                   <td width="50">&nbsp;</td>
                   <td width="896">
                     <div class="TTL" align="center">Cowboys and Carols
-                      2012</div>
+                      2013</div>
                   </td>
                   <td valign="bottom" width="50"> <img
                       src="../Misc/images/spacer.gif" border="0"
@@ -195,7 +195,7 @@ onload="MM_preloadImages('../images/nav/zoo_B.gif','../images/nav/zoo_R.gif','..
                                                   style="font-weight:
                                                   bold;">
                                                   Saturday,
-                                                  December 8, 2012 at 7pm</span></h2>
+                                                  December 7<sup>th</sup>, 2013 at 7pm</span></h2>
                                                 </tr>
                                                 <tr>
                                                   <td
@@ -223,17 +223,28 @@ style="font-size:15px;"></span></strong></big>
                                                       <tbody>
                                                         <tr>
                                                         </tr>
-                                                        <tr
-                                                          style="color:
-                                                          rgb(0, 102,
-                                                          0);">
-                                                          <td id="GREEN"
-                                                          style="vertical-align:
-                                                          top;
-                                                          text-align:
-                                                          center;">
-														  <img alt="Sold Out!"
-														  	src="../images/SoldOut.png" />
+                                                        <tr>
+                                                          <td id="GREEN" style="text-align: center;">
+														  	<h2><p>Buy your tickets using the button below<p>
+      <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+      <input type="hidden" name="cmd" value="_s-xclick">
+      <input type="hidden" name="hosted_button_id" value="6NF958LSFCT64">
+      <table>
+      <tr><td><input type="hidden" name="on0" value="Select type of ticket:">Select type of ticket:</td></tr><tr><td><select name="os0">
+      	<option value="Regular Ticket">Regular Ticket $50.00 USD</option>
+      		<option value="Friends of Hart Park Member">Friends of Hart Park Member $45.00 USD</option>
+      		</select> </td></tr>
+      		</table>
+      		<input type="hidden" name="currency_code" value="USD">
+      		<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+      		<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+      </form>
+
+															<p>Or call <br><b>(661) 222-9542</b><br> to order by phone.</h2>
+															<h3>Not a member?  
+															<a href="../The_Friends/membership.html">
+															Join now </a> and then return here and select the
+															discounted price!</h3><p>
                                                           </td>
                                                         </tr>
                                                       </tbody>
@@ -260,34 +271,31 @@ style="font-size:15px;"></span></strong></big>
                                           <td style="text-align:
                                             center;"> <a
                                               target="_blank"
-                                              href="http://www.cowbop.com"><img
-                                                alt="Featuring Cow Bop!"
-                                                title="Featuring Cow Bop!"
-                                                src="CowboysCarols2012/FeaturingCowBop.png"
+                                              href="http://www.davestamey.com"><img
+                                                alt="Featuring Dave Stamey!"
+                                                title="Featuring Dave Stamey!"
+                                                src="CowboysCarols2013.jpg"
                                                 style="border: 0px
                                                 solid;"></a><br>
                                           </td>
                                         </tr>
                                         <tr style="color: rgb(0, 102,
                                           0);">
-                                          <td id="GREEN"><br>
+                                          <td id="GREEN" align="center"><h4>
                                             Come celebrate William S.
-                                            Hart's birthday with the
-                                            Western-bebop style
-                                            concert performed by <a
-                                              target="_blank"
-                                              href="http://www.cowbop.com/">Cow Bop</a>
+                                            Hart's birthday with 
+                                            <a target="_blank" href="http://www.davestamey.com/">Dave Stamey</a>
                                             in the William S. Hart
                                             Museum on Saturday, December
-                                            8, 2012. Guests will relax
+                                            7<sup>th</sup>, 2013. Guests will relax
                                             in Bill Hart's Living Room
                                             amongst his amazing
                                             collection of Western
                                             artwork and Native American
-                                            artifacts while you listen to
-											Cow Bop's sweet and hot vocals 
-											with acoustic western sensibilities.
-                                            Light refreshments will be
+                                            artifacts while you listen to what
+											<i>Cowboys and Indians</i> Magazine called 
+											&ldquo;the Charley Russell of Western Music&rdquo;.<br><br>
+                                            Refreshments will be
                                             provided and tours through
                                             the Hart Museum, fully
                                             resplendent in stunning
@@ -296,6 +304,7 @@ style="font-size:15px;"></span></strong></big>
                                             special live performance
                                             inside the iconic 1920's era
 											silent film star's Mansion. 
+											</h4>
                                             </td>
                                         </tr>
                                       </tbody>
@@ -320,17 +329,22 @@ style="font-size:15px;"></span></strong></big>
                                 <tr>
                                   <td id="GREEN">
                                     <div style="text-align: center;"> </div>
-                                    <div style="text-align: center;">
-									Mix swingin' grooves, thrilling riffs, sweet and hot vocals, 
-									acoustic western sensibilities and tons of fun and you have 
-									only begun to describe Cow Bop.
-                                    </div>
+                                    <div style="text-align: center;"><h4>
+                                    <a target="_blank" href="http://www.davestamey.com/">Dave Stamey</a>  
+									has been a cowboy, a mule packer, a dude 
+									wrangler, and is now one of the most popular Western entertainers working today.  
+									He has been twice voted Entertainer of the Year, three times Male Performer of 
+									the Year and twice Songwriter of the Year by the Western Music Association, and 
+									received the Will Rogers Award from the Academy of Western Artists. He's 
+									delighted audiences in fourteen states, and finds that he prefers this to 
+									being stomped by angry horses.   
+                                    </h4></div>
                                     <p style="margin-bottom: 0in;"> <a
                                         target="_blank"
-                                        href="http://www.cowbop.com"><img
-                                          alt="Cow Bop" 
-										  title="Cow Bop"
-                                          src="CowboysCarols2012/CowBop.jpg"></a><br>
+                                        href="http://www.davestamey.com"><img
+                                          alt="Dave Stamey" 
+										  title="Dave Stamey"
+                                          src="DaveStamey-sm2.jpg"></a><br>
 	<!--
 		@page { margin: 0.79in }
 		P { margin-bottom: 0.08in }
@@ -342,24 +356,9 @@ style="font-size:15px;"></span></strong></big>
 		@page { margin: 0.79in }
 		P { margin-bottom: 0.08in }
 	--></style><td id="GREEN">
-                                    <div style="text-align: center;">Prior
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+                                    <h4><div style="text-align: center;">Prior
                                       to the concert, guests may also
-                                      enjoy light refreshments and
+                                      enjoy refreshments and
                                       guided tours of the William S.
                                       Hart Museum, decorated in its
                                       holiday splendor. This former home
@@ -370,7 +369,7 @@ style="font-size:15px;"></span></strong></big>
                                       Charles Cristadoro, and artifacts
                                       from various Native American
                                       cultures.<br>
-                                    </div>
+                                    </div></h4>
                                     <div style="text-align: right;"><img
                                         title="Hart's home decorated for the Holidays!" style="width:
                                         490px; height: 366px;"
