--- a/Event_Pages/powwow.html
+++ b/Event_Pages/powwow.html
@@ -172,7 +172,7 @@ onload="MM_preloadImages('images/nav/bDay_B.gif','images/nav/bDay_R.gif','images
                               5px" align="center"> <h2 align="center"> 
 William S. Hart County Park &amp; Museum<br>
 along with The Friends of Hart Park<br>
-are proud to present the<br></h2></p>
+sincerely THANK those who particpated in the<br></h2></p>
                             <h2 align="center"> <u>20th</u> Annual Hart of the West</h2>
                             <p align="center"> </p>
                             <p align="center"> </p>
@@ -187,7 +187,7 @@ September 28<sup>th</sup> &amp; 29<sup>th</sup>
 </h2><p>
 
                             <h2 id="PowWowNote" align="center"><b>
-                                    2013 Vendors, please contact Nadiya 
+                                    2014 Vendors, please contact Nadiya 
                                     at the phone number shown below.</b><br>
 							</h2>
                         </tr>
