--- a/index.htm
+++ b/index.htm
@@ -306,24 +306,6 @@ Click on the images below to see photos from 2013's<br>
                                   cellspacing="5">
                                   <tbody>
                                     <tr>
-                                      <td id="EventDate">Sep. 21<sup>st</sup>
-                                      </td>
-                                      <td id="Event">
-<a href="Event_Pages/DayAtTheRanchCowboy.png" rel="lightbox[dayattheranch]" title="Kids Day At The Ranch">
-									  Kids Day at the Ranch &mdash; Cowboys
-</a>
-                                      </td>
-                                    </tr>
-                                    <tr>
-                                      <td id="EventDate">Sep. 28<sup>th</sup> &amp; 29<sup>th</sup>
-                                      </td>
-                                      <td id="Event">
-									  <a href="Event_Pages/powwow.html">
-									  20<sup>th</sup> Annual Native American Pow Wow
-									  </a>
-                                      </td>
-                                    </tr>
-                                    <tr>
                                       <td id="EventDate">Oct. 13<sup>th</sup>
                                       </td>
                                       <td id="Event">
@@ -358,7 +340,7 @@ Click on the images below to see photos from 2013's<br>
                                       <td id="EventDate">Dec. 7<sup>th</sup>
                                       </td>
                                       <td id="Event">
-<a href="Event_Pages/CowboysCarols2013.jpg" rel="lightbox[cowboyscarols]" title="Cowboys and Carols 2013">
+<a href="Event_Pages/CowboysAndCarols.html" title="Cowboys and Carols 2013">
 									  Cowboys &amp; Carols
 </a>
                                       </td>
@@ -375,9 +357,31 @@ Click on the images below to see photos from 2013's<br>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
-<h3>Come to the 20<sup>th</sup> Annual Hart of the West<p>
-<a href="Event_Pages/powwow.html">Pow Wow and Native American Craft Fair!</a></h3>
-<a href="Event_Pages/powwow.html"><img src="images/powwow.jpg"/></a>
+<h3 id="GREEN"><a href="Event_Pages/CowboysAndCarols.html">Buy tickets</a> for the Hart Holiday Event!<p></h3>
+<a href="Event_Pages/CowboysAndCarols.html"><img src="Event_Pages/CowboysCarols-2013.jpg"/></a>
+<img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
+<h3>Click below to see photos from 2013's<br>
+Friends of Hart Park Volunteer Recognition Dinner</h3>
+<h4>Featuring a tribute to former board member, volunteer, newsletter editor and friend</h4>
+<h1>Elliott McGrew</h1>
+<a href="images/VolunteerRecognition2013/volunteers2013.jpg" rel="lightbox[volunteers2013]" title="2013 Volunteer Recognition Dinner honoring Elliott McGrew">
+<img src="images/VolunteerRecognition2013/thumbs/volunteers2013.jpg" alt="2013 Volunteer Recognition Dinner"/></a>
+<a href="images/VolunteerRecognition2013/volunteers2013-000.jpg" rel="lightbox[volunteers2013]" title="2013 Volunteer Recognition Dinner honoring Elliott McGrew">
+<img src="images/VolunteerRecognition2013/thumbs/volunteers2013-000.jpg" alt="2013 Volunteer Recognition Dinner"/></a>
+<a href="images/VolunteerRecognition2013/volunteers2013-001.jpg" rel="lightbox[volunteers2013]" title="2013 Volunteer Recognition Dinner honoring Elliott McGrew">
+<img src="images/VolunteerRecognition2013/thumbs/volunteers2013-001.jpg" alt="2013 Volunteer Recognition Dinner"/></a>
+<a href="images/VolunteerRecognition2013/volunteers2013-002.jpg" rel="lightbox[volunteers2013]" title="2013 Volunteer Recognition Dinner honoring Elliott McGrew">
+<img src="images/VolunteerRecognition2013/thumbs/volunteers2013-002.jpg" alt="2013 Volunteer Recognition Dinner"/></a>
+<a href="images/VolunteerRecognition2013/volunteers2013-004.jpg" rel="lightbox[volunteers2013]" title="2013 Volunteer Recognition Dinner honoring Elliott McGrew">
+<img src="images/VolunteerRecognition2013/thumbs/volunteers2013-004.jpg" alt="2013 Volunteer Recognition Dinner"/></a>
+<a href="images/VolunteerRecognition2013/volunteers2013-005.jpg" rel="lightbox[volunteers2013]" title="2013 Volunteer Recognition Dinner honoring Elliott McGrew">
+<img src="images/VolunteerRecognition2013/thumbs/volunteers2013-005.jpg" alt="2013 Volunteer Recognition Dinner"/></a>
+<a href="images/VolunteerRecognition2013/volunteers2013-007.jpg" rel="lightbox[volunteers2013]" title="2013 Volunteer Recognition Dinner honoring Elliott McGrew">
+<img src="images/VolunteerRecognition2013/thumbs/volunteers2013-007.jpg" alt="2013 Volunteer Recognition Dinner"/></a>
+<a href="images/VolunteerRecognition2013/volunteers2013-008.jpg" rel="lightbox[volunteers2013]" title="2013 Volunteer Recognition Dinner honoring Elliott McGrew">
+<img src="images/VolunteerRecognition2013/thumbs/volunteers2013-008.jpg" alt="2013 Volunteer Recognition Dinner"/></a>
+<a href="images/VolunteerRecognition2013/volunteers2013-009.jpg" rel="lightbox[volunteers2013]" title="2013 Volunteer Recognition Dinner honoring Elliott McGrew">
+<img src="images/VolunteerRecognition2013/thumbs/volunteers2013-009.jpg" alt="2013 Volunteer Recognition Dinner"/></a>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
@@ -385,6 +389,8 @@ Click on the images below to see photos from 2013's<br>
 to see pictures from the Hart Park events at the </h3>
 <a href="Event_Pages/cowboyfest.html"><img src="Event_Pages/RidersInTheSky.jpg"/></a>
 <h2>20<sup>th</sup> Annual Cowboy Festival</h2>
+                                    <p style="margin-top: 7px;
+                                      margin-bottom: 5px" align="center">
                         </tr>
                       </tbody>
                     </table>
