Removed Bow Wows, added date onto Rose Show

--- a/index.htm
+++ b/index.htm
@@ -305,19 +305,8 @@ Click on the images below to see photos from 2013's<br>
                                   100%;" border="0" cellpadding="4"
                                   cellspacing="5">
                                   <tbody>
-                                    <tr>
-                                      <td id="EventDate">Oct. 13<sup>th</sup>
-                                      </td>
-                                      <td id="Event">
-									  <a target="_blank" href="http://www.bowwowsandmeows.org/">
-									  Bow Wows &amp; Meows Pet Fair</a>
-									  <div id="EventDetail">
-									  link opens a new window 
-									  </div> 
-									  </td> 
-									  </tr> 
 									  <tr>
-                                      <td id="EventDate">Nov. 2<sup>nd</sup>
+                                      <td id="EventDate">Nov. 2<sup>nd</sup> &amp; 3<sup>rd</sup>
                                       </td>
                                       <td id="Event">
 									  <a target="_blank" href="http://scvrs.homestead.com/RoseShow.html">
