Removed the Rose show, added Kid's Day at the Ranch -- Chumash

--- a/index.htm
+++ b/index.htm
@@ -305,17 +305,6 @@ Click on the images below to see photos from 2013's<br>
                                   100%;" border="0" cellpadding="4"
                                   cellspacing="5">
                                   <tbody>
-									  <tr>
-                                      <td id="EventDate">Nov. 2<sup>nd</sup> &amp; 3<sup>rd</sup>
-                                      </td>
-                                      <td id="Event">
-									  <a target="_blank" href="http://scvrs.homestead.com/RoseShow.html">
-									  SCV Rose Show</a>
-									  <div id="EventDetail">
-									  link opens a new window 
-									  </div> 
-                                      </td>
-                                    </tr>
                                     <tr>
                                       <td id="EventDate">Nov. 30<sup>th</sup> &amp; Dec. 1<sup>st</sup>
                                       </td>
@@ -338,7 +327,9 @@ Click on the images below to see photos from 2013's<br>
                                       <td id="EventDate">Dec. 14<sup>th</sup>
                                       </td>
                                       <td id="Event">
-									  Kids Day at the Ranch &mdash; Chumash
+<a href="Event_Pages/DayAtTheRanchChumash.png" rel="lightbox[dayAtTheRanch]" title="Kid's Day At The Ranch &mdash; The Chumash">
+									  Kids Day at the Ranch &mdash; The Chumash
+</a>
                                       </td>
                                     </tr>
                                   </tbody>
