--- a/Event_Pages/index.html
+++ b/Event_Pages/index.html
@@ -225,26 +225,12 @@ style="font-size:15px;"></span></strong></big>
                                                         </tr>
                                                         <tr>
                                                           <td id="GREEN" style="text-align: center;">
-														  	<h2><p>Buy your tickets using the button below<p>
-      <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
-      <input type="hidden" name="cmd" value="_s-xclick">
-      <input type="hidden" name="hosted_button_id" value="6NF958LSFCT64">
-      <table>
-      <tr><td><input type="hidden" name="on0" value="Select type of ticket:">Select type of ticket:</td></tr><tr><td><select name="os0">
-      	<option value="Regular Ticket">Regular Ticket $50.00 USD</option>
-      		<option value="Friends of Hart Park Member">Friends of Hart Park Member $45.00 USD</option>
-      		</select> </td></tr>
-      		</table>
-      		<input type="hidden" name="currency_code" value="USD">
-      		<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-      		<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-      </form>
-
-															<p>Or call <br><b>(661) 222-9542</b><br> to order by phone.</h2>
-															<h3>Not a member?  
-															<a href="../The_Friends/membership.html">
-															Join now </a> and then return here and select the
-															discounted price!</h3><p>
+														  	<h2><p>The event is<p></h2>
+															<h1>SOLD OUT</h1><p>
+															<h2><p>Please call<br>
+															<b>(661) 222-9542</b><br> 
+															to see if there are a few left, or to get 
+															on a possible wait list.</h2>
                                                           </td>
                                                         </tr>
                                                       </tbody>
