Took down Cowboys and Carols, but left up the pretty image for the holidays.

--- a/index.htm
+++ b/index.htm
@@ -306,24 +306,6 @@ Click on the images below to see photos from 2013's<br>
                                   cellspacing="5">
                                   <tbody>
                                     <tr>
-                                      <td id="EventDate">Nov. 30<sup>th</sup> &amp; Dec. 1<sup>st</sup>
-                                      </td>
-                                      <td id="Event">
-<a href="Event_Pages/HolidayBoutique2013.jpg" rel="lightbox[holidayboutique]" title="Hart Holiday Boutique">
-									  Hart Holiday Boutique &amp; Craft Fair
-</a>
-                                      </td>
-                                    </tr>
-                                    <tr>
-                                      <td id="EventDate">Dec. 7<sup>th</sup>
-                                      </td>
-                                      <td id="Event">
-<a href="Event_Pages/CowboysAndCarols.html" title="Cowboys and Carols 2013">
-									  Cowboys &amp; Carols
-</a>
-                                      </td>
-                                    </tr>
-                                    <tr>
                                       <td id="EventDate">Dec. 14<sup>th</sup>
                                       </td>
                                       <td id="Event">
@@ -337,7 +319,9 @@ Click on the images below to see photos from 2013's<br>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
-<a href="Event_Pages/CowboysAndCarols.html"><img src="Event_Pages/CowboysCarols-2013.jpg"/></a>
+<h2>Thanks to all who made it to...</h2>
+<img src="Event_Pages/CowboysCarols-2013.jpg"/>
+<h2>... and Happy Holidays from the Friends of Hart Park!</h2>
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
 <h3>Click below to see photos from 2013's<br>
 Friends of Hart Park Volunteer Recognition Dinner</h3>
